updates actions to match branding tooling changes

--- a/.github/workflows/build_and_archive_release_docs.yml
+++ b/.github/workflows/build_and_archive_release_docs.yml
@@ -3,14 +3,14 @@ name: Build and archive documentation from release branches
 on:
   push:
     branches:
-      - 'uyuni-20[0-9][0-9].[0-9][0-9]' # Only master will build both Uyuni and SUSE Manager documentations
+      - 'uyuni-20[0-9][0-9].[0-9][0-9]' # Only master will build both Uyuni and SUSE Multi-Linux Manager documentations
       - 'manager-4.3-MU-4.3.[0-9][0-9]?' # Other branches will only build SUSE Manager documentation
-      - 'manager-5.0-alpha[0-9]' # Other branches will only build SUSE Manager documentation
-      - 'manager-5.0-beta[0-9]' # Other branches will only build SUSE Manager documentation
-      - 'manager-5.0-rc[0-9]' # Other branches will only build SUSE Manager documentation
-      - 'manager-5.0-gmc[0-9]' # Other branches will only build SUSE Manager documentation
-      - 'manager-5.0-gm' # Other branches will only build SUSE Manager documentation
-      - 'manager-5.0' # Other branches will only build SUSE Manager documentation
+      - 'manager-5.0-alpha[0-9]' # Other branches will only build SUSE Multi-Linux Manager documentation
+      - 'manager-5.0-beta[0-9]' # Other branches will only build SUSE Multi-Linux Manager documentation
+      - 'manager-5.0-rc[0-9]' # Other branches will only build SUSE Multi-Linux Manager documentation
+      - 'manager-5.0-gmc[0-9]' # Other branches will only build SUSE Multi-Linux Manager documentation
+      - 'manager-5.0-gm' # Other branches will only build SUSE Multi-Linux Manager documentation
+      - 'manager-5.0' # Other branches will only build SUSE Multi-Linux Manager documentation
       - 'manager-5.0-MU-5.0.[0-9][0-9]?'
 
 jobs:
@@ -68,34 +68,34 @@ jobs:
         path: uyuni/
       if: startsWith(github.ref_name, 'uyuni-')
 
-    - name: Build the SUSE Manager site documentation
+    - name: Build the SUSE Multi-Linux Manager site documentation
       run: |
         rm -rf ./susemanager # Always clean before building
         cd uyuni-docs-helper
-        ./uyuni-docs-helper -r ${{ github.ref_name }} -g https://github.com/${{ github.repository}}.git -o /tmp -c antora-suma -p suma
+        ./uyuni-docs-helper -r ${{ github.ref_name }} -g https://github.com/${{ github.repository}}.git -o /tmp -c antora-mlm -p mlm
         cd ..
         mkdir ./susemanager # Required so the folder name is included later in the archive
         cp -r /tmp/build ./susemanager/susemanager-site
       if: startsWith(github.ref_name, 'manager-')
 
-    - name: Archive SUSE Manager site Documentation
+    - name: Archive SUSE Multi-Linux Manager site Documentation
       uses: actions/upload-artifact@v4
       with:
         name: documentation-susemanager-site-${{ github.ref_name }}
         path: susemanager/
       if: startsWith(github.ref_name, 'manager-')
 
-    - name: Build the SUSE Manager package documentation (only english)
+    - name: Build the SUSE Multi-Linux Manager package documentation (only english)
       run: |
         rm -rf ./susemanager # Always clean before building
         cd uyuni-docs-helper
-        ./uyuni-docs-helper -r ${{ github.ref_name }} -g https://github.com/${{ github.repository}}.git -o /tmp -c obs-packages-suma-en -p suma
+        ./uyuni-docs-helper -r ${{ github.ref_name }} -g https://github.com/${{ github.repository}}.git -o /tmp -c obs-packages-mlm-en -p mlm
         cd ..
         mkdir ./susemanager # Required so the folder name is included later in the archive
         cp -r /tmp/build/packages/ ./susemanager/susemanager-package
       if: startsWith(github.ref_name, 'manager-')
 
-    - name: Archive SUSE Manager package Documentation (only english)
+    - name: Archive SUSE Multi-Linux Manager package Documentation (only english)
       uses: actions/upload-artifact@v4
       with:
         name: documentation-susemanager-package-${{ github.ref_name }}
