--- a/.github/workflows/test_pdf_translations.yml
+++ b/.github/workflows/test_pdf_translations.yml
@@ -3,9 +3,9 @@ name: Test PDF translations (ja, ko, zh_CN)
 on:
   push:
     branches:
-      - master  # Only master will build both Uyuni and SUSE Manager documentations
-      - manager-4.3 # Other branches will only build SUSE Manager documentation
-      - manager-5.0 # Other branches will only build SUSE Manager documentation
+      - master  # Only master will build both Uyuni and SUSE Multi-Linux Manager documentations
+      - manager-4.3 # Other branches will only build SUSE Multi-Linux Manager documentation
+      - manager-5.0 # Other branches will only build SUSE Multi-Linux Manager documentation
 
 jobs:
   run:
@@ -34,10 +34,10 @@ jobs:
         ./uyuni-docs-helper -r ${{ github.ref_name }} -o /tmp -c pdf-all-uyuni-ja -p uyuni
       if: github.ref_name == 'master'
 
-    - name: Build the SUSE Manager PDFs in Japanese
+    - name: Build the SUSE Multi-Linux Manager PDFs in Japanese
       run: |
         cd uyuni-docs-helper
-        ./uyuni-docs-helper -r ${{ github.ref_name }} -o /tmp -c pdf-all-uyuni-ja -p suma
+        ./uyuni-docs-helper -r ${{ github.ref_name }} -o /tmp -c pdf-all-mlm-ja -p mlm
 
     - name: Build the Uyuni PDFs in Korean
       run: |
@@ -45,10 +45,10 @@ jobs:
         ./uyuni-docs-helper -r ${{ github.ref_name }} -o /tmp -c pdf-all-uyuni-ko -p uyuni
       if: github.ref_name == 'master'
 
-    - name: Build the SUSE Manager PDFs in Korean
+    - name: Build the SUSE Multi-Linux Manager PDFs in Korean
       run: |
         cd uyuni-docs-helper
-        ./uyuni-docs-helper -r ${{ github.ref_name }} -o /tmp -c pdf-all-uyuni-ko -p suma
+        ./uyuni-docs-helper -r ${{ github.ref_name }} -o /tmp -c pdf-all-mlm-ko -p mlm
 
     - name: Build the Uyuni PDFs in Chinese, Simplified
       run: |
@@ -56,7 +56,7 @@ jobs:
         ./uyuni-docs-helper -r ${{ github.ref_name }} -o /tmp -c pdf-all-uyuni-zh_CN -p uyuni
       if: github.ref_name == 'master'
 
-    - name: Build the SUSE Manager PDFs in Chinese, Simplified
+    - name: Build the SUSE Multi-Linux Manager PDFs in Chinese, Simplified
       run: |
         cd uyuni-docs-helper
-        ./uyuni-docs-helper -r ${{ github.ref_name }} -o /tmp -c pdf-all-uyuni-zh_CN -p suma
+        ./uyuni-docs-helper -r ${{ github.ref_name }} -o /tmp -c pdf-all-mlm-zh_CN -p mlm
