--- a/parameters.yml
+++ b/parameters.yml
@@ -419,7 +419,7 @@ asciidoc:
     - attribute: toclevels
       value: 3
     - attribute: toc
-      value: left
+      value: auto
     - attribute: doctype
       value: book
     - attribute: byos
