--- a/.github/workflows/build_and_archive_devel_docs.yml
+++ b/.github/workflows/build_and_archive_devel_docs.yml
@@ -54,10 +54,10 @@ jobs:
         ./uyuni-docs-helper -r ${{ github.ref_name }} -g https://github.com/${{ github.repository}}.git -o /tmp -c antora-mlm-en -p mlm
         cd ..
         mkdir ./susemanager # Required so the folder name is included later in the archive
-        cp -r /tmp/build ./susemanager/susemanager
+        cp -r /tmp/build ./mlm/suse-multi-linux-manager
 
     - name: Archive SUSE Multi-Linux Manager Documentation
       uses: actions/upload-artifact@v4
       with:
-        name: documentation-susemanager-${{ github.ref_name }}
-        path: susemanager/
+        name: documentation-suse-multi-linux-manager-${{ github.ref_name }}
+        path: suse-multi-linux-manager/
