--- a/.github/workflows/build_and_archive_devel_docs.yml
+++ b/.github/workflows/build_and_archive_devel_docs.yml
@@ -53,8 +53,8 @@ jobs:
         cd uyuni-docs-helper
         ./uyuni-docs-helper -r ${{ github.ref_name }} -g https://github.com/${{ github.repository}}.git -o /tmp -c antora-mlm-en -p mlm
         cd ..
-        mkdir ./susemanager # Required so the folder name is included later in the archive
-        cp -r /tmp/build ./mlm/suse-multi-linux-manager
+        mkdir ./suse-multi-linux-manager # Required so the folder name is included later in the archive
+        cp -r /tmp/build ./suse-multi-linux-manager/suse-multi-linux-manager
 
     - name: Archive SUSE Multi-Linux Manager Documentation
       uses: actions/upload-artifact@v4
