--- a/.github/workflows/build_and_archive_release_docs.yml
+++ b/.github/workflows/build_and_archive_release_docs.yml
@@ -81,25 +81,25 @@ jobs:
     - name: Archive SUSE Multi-Linux Manager site Documentation
       uses: actions/upload-artifact@v4
       with:
-        name: documentation-susemanager-site-${{ github.ref_name }}
-        path: susemanager/
+        name: documentation-suse-multi-linux-manager-site-${{ github.ref_name }}
+        path: suse-multi-linux-manager/
       if: startsWith(github.ref_name, 'manager-')
 
     - name: Build the SUSE Multi-Linux Manager package documentation (only english)
       run: |
-        rm -rf ./susemanager # Always clean before building
+        rm -rf ./suse-multi-linux-manager # Always clean before building
         cd uyuni-docs-helper
         ./uyuni-docs-helper -r ${{ github.ref_name }} -g https://github.com/${{ github.repository}}.git -o /tmp -c obs-packages-mlm-en -p mlm
         cd ..
-        mkdir ./susemanager # Required so the folder name is included later in the archive
-        cp -r /tmp/build/packages/ ./susemanager/susemanager-package
+        mkdir ./suse-multi-linux-manager # Required so the folder name is included later in the archive
+        cp -r /tmp/build/packages/ ./suse-multi-linux-manager/suse-multi-linux-manager-package
       if: startsWith(github.ref_name, 'manager-')
 
     - name: Archive SUSE Multi-Linux Manager package Documentation (only english)
       uses: actions/upload-artifact@v4
       with:
-        name: documentation-susemanager-package-${{ github.ref_name }}
-        path: susemanager/
+        name: documentation-suse-multi-linux-manager-package-${{ github.ref_name }}
+        path: suse-multi-linux-manager/
       if: startsWith(github.ref_name, 'manager-')
 
     - name: Archive the changelog
