Added SAP parameter to the branch.

--- a/parameters.yml
+++ b/parameters.yml
@@ -216,6 +216,8 @@ asciidoc:
       value: "SUSE Manager Proxy"
     - attribute: sles
       value: "SUSE Linux Enterprise Server"
+    - attribute: slesforsap
+      value: "SUSE Linux Enterprise Server for SAP Applications"
     - attribute: sled
       value: "SUSE Linux Enterprise Desktop"
     - attribute: sle
