update build for pdf for dsc

--- a/Makefile.en
+++ b/Makefile.en
@@ -50,6 +50,7 @@ prepare-antora-mlm-en: copy-branding-en set-html-language-selector-mlm-en
 .PHONY: antora-mlm-en
 antora-mlm-en: configure-mlm-branding-dsc-en prepare-antora-mlm-en pdf-all-mlm-en pdf-tar-mlm-en
 	$(call antora-mlm-function,translations/en,en)
+
 	@echo "Running embedded PDF cleanup for en..."
 
 	@bash -c ' \
@@ -111,7 +112,7 @@ antora-mlm-en: configure-mlm-branding-dsc-en prepare-antora-mlm-en pdf-all-mlm-e
 		        # Remove the now empty pdf directory \
 		        rmdir "$$SRC_LOCALE_PDF" 2>/dev/null || true; \
 		    else \
-		        echo "No PDFs found for locale: $$locale"; \
+		        echo "Locale awaiting build...: $$locale"; \
 		    fi; \
 		done; \
 		\
@@ -124,7 +125,6 @@ antora-mlm-en: configure-mlm-branding-dsc-en prepare-antora-mlm-en pdf-all-mlm-e
 		\
 		echo "PDF processing complete for en." \
 	'
-
 
 
 .PHONY: obs-packages-mlm-en
