--- a/Makefile.ja
+++ b/Makefile.ja
@@ -50,6 +50,7 @@ prepare-antora-mlm-ja: copy-branding-ja set-html-language-selector-mlm-ja
 .PHONY: antora-mlm-ja
 antora-mlm-ja: configure-mlm-branding-dsc-ja prepare-antora-mlm-ja pdf-all-mlm-ja pdf-tar-mlm-ja
 	$(call antora-mlm-function,translations/ja,ja)
+
 	@echo "Running embedded PDF cleanup for ja..."
 
 	@bash -c ' \
@@ -111,7 +112,7 @@ antora-mlm-ja: configure-mlm-branding-dsc-ja prepare-antora-mlm-ja pdf-all-mlm-j
 		        # Remove the now empty pdf directory \
 		        rmdir "$$SRC_LOCALE_PDF" 2>/dev/null || true; \
 		    else \
-		        echo "No PDFs found for locale: $$locale"; \
+		        echo "Locale awaiting build...: $$locale"; \
 		    fi; \
 		done; \
 		\
@@ -124,7 +125,6 @@ antora-mlm-ja: configure-mlm-branding-dsc-ja prepare-antora-mlm-ja pdf-all-mlm-j
 		\
 		echo "PDF processing complete for ja." \
 	'
-
 
 
 .PHONY: obs-packages-mlm-ja
