--- a/Makefile.ko
+++ b/Makefile.ko
@@ -50,6 +50,7 @@ prepare-antora-mlm-ko: copy-branding-ko set-html-language-selector-mlm-ko
 .PHONY: antora-mlm-ko
 antora-mlm-ko: configure-mlm-branding-dsc-ko prepare-antora-mlm-ko pdf-all-mlm-ko pdf-tar-mlm-ko
 	$(call antora-mlm-function,translations/ko,ko)
+
 	@echo "Running embedded PDF cleanup for ko..."
 
 	@bash -c ' \
@@ -111,7 +112,7 @@ antora-mlm-ko: configure-mlm-branding-dsc-ko prepare-antora-mlm-ko pdf-all-mlm-k
 		        # Remove the now empty pdf directory \
 		        rmdir "$$SRC_LOCALE_PDF" 2>/dev/null || true; \
 		    else \
-		        echo "No PDFs found for locale: $$locale"; \
+		        echo "Locale awaiting build...: $$locale"; \
 		    fi; \
 		done; \
 		\
@@ -124,7 +125,6 @@ antora-mlm-ko: configure-mlm-branding-dsc-ko prepare-antora-mlm-ko pdf-all-mlm-k
 		\
 		echo "PDF processing complete for ko." \
 	'
-
 
 
 .PHONY: obs-packages-mlm-ko
