--- a/Makefile.zh_CN
+++ b/Makefile.zh_CN
@@ -50,6 +50,7 @@ prepare-antora-mlm-zh_CN: copy-branding-zh_CN set-html-language-selector-mlm-zh_
 .PHONY: antora-mlm-zh_CN
 antora-mlm-zh_CN: configure-mlm-branding-dsc-zh_CN prepare-antora-mlm-zh_CN pdf-all-mlm-zh_CN pdf-tar-mlm-zh_CN
 	$(call antora-mlm-function,translations/zh_CN,zh_CN)
+
 	@echo "Running embedded PDF cleanup for zh_CN..."
 
 	@bash -c ' \
@@ -111,7 +112,7 @@ antora-mlm-zh_CN: configure-mlm-branding-dsc-zh_CN prepare-antora-mlm-zh_CN pdf-
 		        # Remove the now empty pdf directory \
 		        rmdir "$$SRC_LOCALE_PDF" 2>/dev/null || true; \
 		    else \
-		        echo "No PDFs found for locale: $$locale"; \
+		        echo "Locale awaiting build...: $$locale"; \
 		    fi; \
 		done; \
 		\
@@ -124,7 +125,6 @@ antora-mlm-zh_CN: configure-mlm-branding-dsc-zh_CN prepare-antora-mlm-zh_CN pdf-
 		\
 		echo "PDF processing complete for zh_CN." \
 	'
-
 
 
 .PHONY: obs-packages-mlm-zh_CN
