--- a/Makefile.zh_CN
+++ b/Makefile.zh_CN
@@ -51,6 +51,82 @@ prepare-antora-mlm-zh_CN: copy-branding-zh_CN set-html-language-selector-mlm-zh_
 antora-mlm-zh_CN: configure-mlm-branding-dsc-zh_CN prepare-antora-mlm-zh_CN pdf-all-mlm-zh_CN pdf-tar-mlm-zh_CN
 	$(call antora-mlm-function,translations/zh_CN,zh_CN)
 
+	@echo "Running embedded PDF cleanup for zh_CN..."
+
+	@bash -c ' \
+		# Cleanup Block Starts Here \
+		\
+		# Define directories \
+		BUILD_DIR="build"; \
+		PDF_DIR="$$BUILD_DIR/pdf"; \
+		EN_PDF_DIR="$$BUILD_DIR/en/pdf"; \
+		LOCALES="ko ja zh_CN"; \
+		KEEP_FILES="suse_multi_linux_manager_administration_guide.pdf suse_multi_linux_manager_client-configuration_guide.pdf suse_multi_linux_manager_installation-and-upgrade_guide.pdf suse_multi_linux_manager_specialized-guides_guide.pdf"; \
+		\
+		# Debug Output \
+		echo "BUILD_DIR is set to: $$BUILD_DIR"; \
+		echo "PDF_DIR is set to: $$PDF_DIR"; \
+		echo "EN_PDF_DIR is set to: $$EN_PDF_DIR"; \
+		echo "Locales to process: $$LOCALES"; \
+		echo "Files to keep: $$KEEP_FILES"; \
+		\
+		# Check if the build directory exists; create it if not \
+		if [ ! -d "$$BUILD_DIR" ]; then \
+		    echo "Warning: The build directory does not exist. Creating it now..."; \
+		    mkdir -p "$$BUILD_DIR"; \
+		fi; \
+		\
+		# Ensure target pdf directory exists \
+		mkdir -p "$$PDF_DIR/en"; \
+		\
+		# Step 1: Copy all files from build/en/pdf/ to build/pdf/en/ \
+		if [ -d "$$EN_PDF_DIR" ]; then \
+		    echo "Copying English PDFs to $$PDF_DIR/en/"; \
+		    cp -r "$$EN_PDF_DIR/"* "$$PDF_DIR/en/" 2>/dev/null || true; \
+		else \
+		    echo "Warning: English PDF directory not found. Skipping copy."; \
+		fi; \
+		\
+		# Step 2 & 3: Process ko, ja, and zh_CN directories \
+		for locale in $$LOCALES; do \
+		    SRC_LOCALE_PDF="$$BUILD_DIR/$$locale/pdf"; \
+		    DEST_LOCALE_PDF="$$PDF_DIR/$$locale"; \
+		    \
+		    if [ -d "$$SRC_LOCALE_PDF" ]; then \
+		        echo "Processing PDFs for locale: $$locale"; \
+		        mkdir -p "$$DEST_LOCALE_PDF"; \
+		        \
+		        for file in "$$SRC_LOCALE_PDF"/*; do \
+		            if [ -f "$$file" ]; then \
+		                filename=$$(basename "$$file"); \
+		                if echo "$$KEEP_FILES" | grep -q "$$filename"; then \
+		                    echo "Keeping $$file"; \
+		                    mv "$$file" "$$DEST_LOCALE_PDF/"; \
+		                else \
+		                    echo "Removing $$file (not in keep list)"; \
+		                    rm -f "$$file"; \
+		                fi; \
+		            fi; \
+		        done; \
+		        \
+		        # Remove the now empty pdf directory \
+		        rmdir "$$SRC_LOCALE_PDF" 2>/dev/null || true; \
+		    else \
+		        echo "Locale awaiting build...: $$locale"; \
+		    fi; \
+		done; \
+		\
+		# Step 4: Clean up remaining directories \
+		echo "Cleaning up leftover PDF directories..."; \
+		rm -rf "$$EN_PDF_DIR"; \
+		for locale in $$LOCALES; do \
+		    rm -rf "$$BUILD_DIR/$$locale/pdf"; \
+		done; \
+		\
+		echo "PDF processing complete for zh_CN." \
+	'
+
+
 .PHONY: obs-packages-mlm-zh_CN
 obs-packages-mlm-zh_CN: configure-mlm-branding-webui-zh_CN pdf-all-mlm-zh_CN antora-mlm-zh_CN ## Generate mlm OBS tar files
 	$(call obs-packages-product,zh_CN,zh_CN/pdf,susemanager-docs_zh_CN,susemanager-docs_zh_CN-pdf)
