Container Image Inspection bsc#1236323 (#3729)
* bsc#1236323
* update cfg files
* add background info
* Update modules/administration/pages/troubleshooting/tshoot-container-inspection.adoc
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/l10n-weblate/administration.cfg
+++ b/l10n-weblate/administration.cfg
@@ -26,6 +26,7 @@
 [type: asciidoc] modules/administration/pages/custom-channels.adoc $lang:translations/$lang/modules/administration/pages/custom-channels.adoc
 [type: asciidoc] modules/administration/pages/disconnected-setup.adoc $lang:translations/$lang/modules/administration/pages/disconnected-setup.adoc
 [type: asciidoc] modules/administration/pages/image-management.adoc $lang:translations/$lang/modules/administration/pages/image-management.adoc
+[type: asciidoc] modules/administration/pages/image-mgmt-container-inspection.adoc $lang:translations/$lang/modules/administration/pages/image-mgmt-container-inspection.adoc
 [type: asciidoc] modules/administration/pages/infra-maintenance.adoc $lang:translations/$lang/modules/administration/pages/infra-maintenance.adoc
 [type: asciidoc] modules/administration/pages/iss.adoc $lang:translations/$lang/modules/administration/pages/iss.adoc
 [type: asciidoc] modules/administration/pages/iss_intro.adoc $lang:translations/$lang/modules/administration/pages/iss_intro.adoc
