--- a/parameters.yml
+++ b/parameters.yml
@@ -419,7 +419,7 @@ asciidoc:
     - attribute: sourcedir
       value: .
     - attribute: source-highlighter
-      value: coderay
+      value: highlight.js
     - attribute: toclevels
       value: 3
     - attribute: toc
