--- a/Makefile.ja
+++ b/Makefile.ja
@@ -48,7 +48,7 @@ prepare-antora-mlm-ja: copy-branding-ja set-html-language-selector-mlm-ja
 	cd $(current_dir)
 
 .PHONY: antora-mlm-ja
-antora-mlm-ja: configure-mlm-branding-dsc-ja prepare-antora-mlm-ja #pdf-all-mlm-ja #pdf-tar-mlm-ja
+antora-mlm-ja: configure-mlm-branding-dsc-ja prepare-antora-mlm-ja pdf-all-mlm-ja pdf-tar-mlm-ja
 	$(call antora-mlm-function,translations/ja,ja)
 
 
