--- a/parameters.yml
+++ b/parameters.yml
@@ -38,7 +38,7 @@ products:
       # For d.s.c use: https://documentation.suse.com/suma/5.0/
       # For the webui use: /
       - attribute: url
-        value: /
+        value: https://documentation.suse.com/suma/5.0/
     ui:
       bundle:
         - attribute: url
