first push for pdf

--- a/branding/pdf/themes/suse-cjk-theme.yml
+++ b/branding/pdf/themes/suse-cjk-theme.yml
@@ -247,7 +247,7 @@ title-page:
   background-color: #fff
   font-family: Noto Sans CJK SC
   align: left
-  background_image: image:images/cloud.jpeg[fit=none, pdfwidth=100%, position=center]
+  #background_image: image:images/cloud.jpeg[fit=none, pdfwidth=100%, position=center]
 
   # Logo
   logo:
