--- a/branding/pdf/themes/suse-theme.yml
+++ b/branding/pdf/themes/suse-theme.yml
@@ -7,6 +7,18 @@
 # Define font catalog
 font:
   catalog:
+    #SUSE 2025 Font
+    SUSE:
+      # SUSE Latin
+      normal: SUSE-Regular.ttf
+      bold: SUSE-Bold.ttf
+      italic: SUSE-Regular.ttf
+      bold_italic: SUSE-Bold.ttf
+      # SUSE Latin Ext
+      light: SUSE-Light.ttf
+      medium: SUSE-Medium.ttf
+      semibold: SUSE-SemiBold.ttf
+      heavy: SUSE-ExtraBold.ttf
 
     #SUSE 2021 Font
     Poppins:
@@ -58,10 +70,10 @@ font:
     - M+ 1p Fallback
 
 capfont:
-  font: Poppins Light
+  font: SUSE light
 
 brand:
-  font: Poppins
+  font: SUSE
   #Free Serif
   # Colors from: https://www.suse.com/brandcentral/suse/identity.php#palette
   primary:
@@ -160,7 +172,7 @@ vertical_spacing: $vertical_rhythm
 # Links
 link:
   font-color: $brand_primary_susejungle
-  font-family: Poppins
+  font-family: SUSE
   font-style: italic
   font_size: $base_font_size_medium
 
@@ -168,13 +180,13 @@ link:
 codespan:
   background-color: #ffffff
   font-color: #0C322C
-  font-family: Poppins
+  font-family: SUSE
   font-style: bold
   font_size: $base_font_size_xxsmall * 1.3
 
 ulist:
   marker:
-    font_family: Poppins
+    font_family: SUSE
     font_size: 18
     line_height: 0.4
     margin: 10
@@ -223,7 +235,7 @@ heading:
 extends: default
 role:
   title:
-    background-color: #30BA78
+    background-color: #90ebcd
     border-offset: 4
 
 # Title Page
@@ -231,32 +243,31 @@ title-page:
   background-color: #fff
   font-family: $brand_font
   align: left
-  background_image: image:images/cloud.jpeg[fit=none, pdfwidth=100%, position=center]
 
   # Logo
   logo:
-    top: 90%
-    align: right
-    image: image:images/suse-vert-forlight.svg[pdfwidth=15%]
+    top: 5%
+    align: left
+    image: image:images/SUSE_Logo-hor_rgb.svg[pdfwidth=30%]
 
   # Title
   title:
-    font_color: #fff
-    font-style: normal
-    top: 5%
+    font_color: #0c322c
+    font-style: light
+    top: 28%
     font_size: $base_font_size_xxxlarge
     line_height: .7
     margin-bottom: 10
-    font-family: Poppins
+    font-family: SUSE
 
   # Subtitle
   subtitle:
-    font_color: #0C322C
-    font_style: bold
+    font_color: #30ba78
+    font_style: semibold
     line_height: .7
     margin_top: $base_font_size * 1.25
-    font_size: $base_font_size_superlarge
-    font-family: Poppins
+    font_size: $base_font_size_ultralarge
+    font-family: SUSE
 
   # Authors
   authors:
@@ -272,6 +283,53 @@ title-page:
     font-color: #0C322C
     font-size: $heading_h5_font_size
     #margin-top: $base_font_size * 1.25
+
+
+# # Title Page
+# title-page:
+#   background-color: #ffffff  # White background
+#   font-family: SUSE
+#   align: left
+
+#   # Logo
+#   logo:
+#     top: 5%
+#     align: left
+#     image: image:images/suse-vert-forlight.svg[pdfwidth=12%]  # Adjust size to match the original
+
+#   # Subtitle (SUSE Linux Enterprise Server 15 SP6)
+#   subtitle:
+#     font_color: #0C322C  # Dark green
+#     background_color: #DFF1E2  # Light green box
+#     font-style: normal
+#     font_size: $base_font_size_large
+#     padding: 5
+#     font-family: SUSE
+#     margin-bottom: 10
+
+#   # Title (Administration Guide)
+#   title:
+#     font_color: #0C8C45  # SUSE green
+#     font-style: bold
+#     font_size: $base_font_size_xxxlarge
+#     line_height: .7
+#     margin-top: 5
+#     font-family: SUSE
+
+#   # Authors (if needed)
+#   authors:
+#     font_color: #ffffff
+#     margin_top: $base_font_size * 1.25
+#     font_size: $base_font_size
+
+#   # Product version number and date
+#   revision:
+#     line_height: .7
+#     margin-top: 18
+#     font-style: italic
+#     font-color: #0C322C
+#     font-size: $heading_h5_font_size
+
 
 block:
   margin_top: 0
@@ -342,7 +400,7 @@ button:
   font-color: $brand_primary_susepine
   font-size: $base_font_size_normal
   background-color: #F2F2F2
-  font-family: Poppins
+  font-family: SUSE
 
 kbd:
   separator: "\u2009+\u2009"
@@ -364,7 +422,7 @@ quote:
 # Code is used for source blocks
 code:
   font_color: #0C322C
-  font_family: Poppins
+  font_family: SUSE
   font_size: ceil($base_font_size)
   line_height: 1.0
   line_gap: 0
