update pdf styles and added new ruby template

--- a/branding/pdf/themes/suse-theme.yml
+++ b/branding/pdf/themes/suse-theme.yml
@@ -1,7 +1,7 @@
 ###
 ### This is the AsciiDoctor-PDF export template for SUSE Documentation
 ###
-### Joseph Cayouette (jcayouette@suse.com), 2021
+### Joseph Cayouette (jcayouette@suse.com), 2025
 ###
 
 # Define font catalog
@@ -19,19 +19,6 @@ font:
       medium: SUSE-Medium.ttf
       semibold: SUSE-SemiBold.ttf
       heavy: SUSE-ExtraBold.ttf
-
-    #SUSE 2021 Font
-    Poppins:
-      normal: Poppins-Regular.ttf
-      bold: Poppins-Medium.ttf
-      italic: Poppins-Light.ttf
-      bold_italic: Poppins-BoldItalic.ttf
-
-    # SUSE 2019 Font
-    Work Sans:
-      normal: WorkSans-Regular.ttf
-      bold: WorkSans-Medium.ttf
-      italic: WorkSans-Light.ttf
 
     Free Serif:
       normal: freeserif.ttf
@@ -157,7 +144,8 @@ base:
   font_style: normal
   font_size: $base_font_size_normal
   line_height_length: 13.8
-  line_height: $base_line_height_length / $base_font_size
+  line-height: 1.5
+  #line_height: $base_line_height_length / $base_font_size
   border_color: #EEEEEE
   border_radius: 4
   border_width: 0.5
@@ -189,7 +177,8 @@ ulist:
     font_family: SUSE
     font_size: 18
     line_height: 0.4
-    margin: 10
+    margin-top: 5
+    margin-bottom: 5
     font_color: $brand_primary_susejungle
     disc:
       content: "\u2022"
@@ -206,11 +195,11 @@ heading:
   font_style: bold
   h1:
     font_color: $brand_primary_susepine
-    font_size: $base_font_size_superlarge
+    font_size: $base_font_size_xxlarge
     font_weight: normal
   h2:
     font_color: $brand_primary_susejungle
-    font_size: $base_font_size_xxxlarge
+    font_size: $base_font_size_xxlarge
     font_style: normal
   h3:
     font_color: $brand_primary_susejungle
@@ -218,15 +207,15 @@ heading:
     font_style: normal
   h4:
     font_color: $brand_primary_susejungle
-    font_size: $base_font_size_xlarge
+    font_size: $base_font_size_xxlarge
     font_style: normal
   h5:
     font_color: $brand_primary_susejungle
-    font_size: $base_font_size_large
+    font_size: $base_font_size_xxlarge
     font_style: normal
   h6:
     font_color: $brand_primary_susejungle
-    font_size: $base_font_size_medium
+    font_size: $base_font_size_xxlarge
   line_height: 1
   margin_top: $vertical_rhythm * 0.4
   margin_bottom: $vertical_rhythm * 0.9
@@ -235,20 +224,22 @@ heading:
 extends: default
 role:
   title:
-    background-color: #90ebcd
-    border-offset: 4
+    background-color: #c0efde
+    border-offset: 2
 
 # Title Page
 title-page:
   background-color: #fff
   font-family: $brand_font
   align: left
+  revision:
+    display: none
 
   # Logo
   logo:
-    top: 5%
+    top: 0%
     align: left
-    image: image:images/SUSE_Logo-hor_rgb.svg[pdfwidth=30%]
+    image: image:images/SUSE_Logo-hor_rgb.svg[pdfwidth=32%]
 
   # Title
   title:
@@ -257,79 +248,17 @@ title-page:
     top: 28%
     font_size: $base_font_size_xxxlarge
     line_height: .7
-    margin-bottom: 10
+    margin-bottom: 4
     font-family: SUSE
-
+    
   # Subtitle
   subtitle:
     font_color: #30ba78
     font_style: semibold
     line_height: .7
-    margin_top: $base_font_size * 1.25
+    margin_top: 5
     font_size: $base_font_size_ultralarge
     font-family: SUSE
-
-  # Authors
-  authors:
-    font_color: #ffffff
-    margin_top: $base_font_size * 1.25
-    font_size: $base_font_size
-
-  # Product version number and date
-  revision:
-    line_height: .7
-    margin-top: 18
-    font-style: italic
-    font-color: #0C322C
-    font-size: $heading_h5_font_size
-    #margin-top: $base_font_size * 1.25
-
-
-# # Title Page
-# title-page:
-#   background-color: #ffffff  # White background
-#   font-family: SUSE
-#   align: left
-
-#   # Logo
-#   logo:
-#     top: 5%
-#     align: left
-#     image: image:images/suse-vert-forlight.svg[pdfwidth=12%]  # Adjust size to match the original
-
-#   # Subtitle (SUSE Linux Enterprise Server 15 SP6)
-#   subtitle:
-#     font_color: #0C322C  # Dark green
-#     background_color: #DFF1E2  # Light green box
-#     font-style: normal
-#     font_size: $base_font_size_large
-#     padding: 5
-#     font-family: SUSE
-#     margin-bottom: 10
-
-#   # Title (Administration Guide)
-#   title:
-#     font_color: #0C8C45  # SUSE green
-#     font-style: bold
-#     font_size: $base_font_size_xxxlarge
-#     line_height: .7
-#     margin-top: 5
-#     font-family: SUSE
-
-#   # Authors (if needed)
-#   authors:
-#     font_color: #ffffff
-#     margin_top: $base_font_size * 1.25
-#     font_size: $base_font_size
-
-#   # Product version number and date
-#   revision:
-#     line_height: .7
-#     margin-top: 18
-#     font-style: italic
-#     font-color: #0C322C
-#     font-size: $heading_h5_font_size
-
 
 block:
   margin_top: 0
@@ -421,15 +350,16 @@ quote:
 
 # Code is used for source blocks
 code:
-  font_color: #0C322C
-  font_family: SUSE
+  font_color: #0c322c
+  border_color: #eafaf4
+  background_color: #eafaf4
+  font_family: M+ 1mn
   font_size: ceil($base_font_size)
   line_height: 1.0
   line_gap: 0
-  border_radius: 2
+  border_radius: 0
   padding: 6
-  border_color: #ffffff
-  background_color: #90EBCD
+
 
 # Conum
 conum:
@@ -482,6 +412,14 @@ description_list:
   term_spacing: $vertical_rhythm / 4
   description_indent: $horizontal_rhythm * 1.25
 
+literal:
+  font-color: #0c322c
+  font-family: SUSE
+  font-style: light
+  text-decoration: underline
+  text-decoration-color: #efefef
+
+
 # Controls
 list:
   indent: $horizontal_rhythm * 1.5
@@ -513,13 +451,13 @@ toc:
   font_color: $brand_primary_susejungle
   line_height: 1.0
   dot_leader:
-    content: ". "
+    content: " "
     font_color: $brand_primary_susepine
     levels: 2 3 4 5 6
   h1_font_color: $brand_primary_susepine
   h1_font_size: $base_font_size_xxlarge
 
-  h2_font_color: $brand_primary_susejungle
+  h2_font_color: $brand_primary_susepine
   h2_font_size: $base_font_size_xlarge
 
   h3_font_color: $brand_primary_susepine
@@ -559,8 +497,8 @@ footer:
   font-color: #000
   font-style: italic
   # NOTE if background_color is set, background and border will span width of page
-  border_color: dddddd
-  border_width: 0.25
+  #border_color: dddddd
+  #border_width: 0.25
   height: 0.75in
   line_height: $base_line_height
   padding: [$base_line_height_length / 0, 0, 0, 0]
@@ -576,24 +514,42 @@ footer:
   # * {section-title}
   # * {section-or-chapter-title}
 
-  recto:
-    #columns: "<50% =0% >50%"
-    left:
-      content: '{document-title} | {section-or-chapter-title} '
+  # recto:
+  #   #columns: "<50% =0% >50%"
+  #   left:
+  #     content: '{document-title} | {section-or-chapter-title} '
 
+  #   center:
+  #     content:
+
+  #   right:
+  #     content:  '*{page-number} / {page-count}*'
+
+  # verso:
+  #   left:
+  #     content: $footer_recto_left_content
+
+  #   center:
+  #     content: $footer_recto_center_content
+
+  #   right:
+  #     content: $footer_recto_right_content
+
+  recto:
+    left:
+      content: '*{page-number} / {page-count}*'
+      font-color: #000
     center:
       content:
-
     right:
-      content:  '*{page-number} / {page-count}*'
+      content: '{section-or-chapter-title} | {document-title}'
+      font-color: #000
+      background-color: transparent
 
   verso:
     left:
       content: $footer_recto_left_content
-
     center:
       content: $footer_recto_center_content
-
     right:
       content: $footer_recto_right_content
-
