update book introductions to support new pdf styles

--- a/parameters.yml
+++ b/parameters.yml
@@ -12,8 +12,11 @@ products:
           value: "5.1"
         - attribute: currentversion
           value: "Beta 1"
-        - attribute: currentyear
-          value: "2025"
+        #- attribute: revdate
+        #  value: "March 6, 2025"
+        # License date adjust each year
+        - attribute: copyrightdate
+          value: "2006–2025"
         # releaseversion is used to specify what version a user is looking at. In the future add :releaseversion: to each page header
         #- attribute: releaseversion
         #  value: "GMC"
@@ -418,10 +421,10 @@ asciidoc:
       value: .
     - attribute: source-highlighter
       value: coderay
-    - attribute: toclevels
-      value: 3
-    - attribute: toc
-      value: auto
+    #- attribute: toclevels
+    #  value: 3
+    #- attribute: toc
+    #  value: auto
     - attribute: doctype
       value: book
     - attribute: byos
