--- a/parameters.yml
+++ b/parameters.yml
@@ -203,7 +203,7 @@ asciidoc:
     - attribute: sectlinks
       value: true
     - attribute: sectnums
-      value: true
+      value: all
     - attribute: sectnumlevels
       value: 5
     - attribute: icons
@@ -423,7 +423,7 @@ asciidoc:
     - attribute: toclevels
       value: 3
     - attribute: toc
-      value: auto
+      value: false
     - attribute: doctype
       value: book
     - attribute: byos
